# Tux-TI83

./: CMakeLists.txt  README.md  build.sh
app/: main.cpp
core_math/include/capsules/: capsule_math.hpp
core_math/src/: core_math.cpp
graph_ui/include/: ui_controller.hpp
graph_ui/qml/: Main.qml
graph_ui/src/: ui_controller.cpp
